# glaredb-demo

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cdktf.json  glaredb_demo.ipynb  infrastructure.py  noxfile.py  package-lock.json  package.json  pyproject.toml
