[tool.poetry]
name = "glaredb-demo"
version = "0.1.0"
description = "GlareDB Demo"
authors = ["AJ Welch <awelch0100@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
glaredb = "^0.9.4"
notebook = "^7.2.1"
polars = "^1.3.0"
pyarrow = "^17.0.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
pylint = "^3.2.6"
mypy = "^1.11.0"
types-python-dateutil = "^2.9.0.20240315"
nox = "^2024.4.15"
pre-commit = "^3.7.1"
cdktf = "^0.20.8"
cdktf-cdktf-provider-google_beta = "^13.20.0"
nbqa = "^1.8.5"
black = "^24.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# ########################
# ##### BLACK
# ########################

# [Docs root]
#   https://black.readthedocs.io/en/stable/
# [Config option reference]
#   https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#command-line-options

[tool.black]
# Black will refuse to run if it's not this version.
required-version = "24.4.2"

# Ensure black's output will be compatible with all listed versions.
target-version = ["py312"]

# ########################
# ##### ISORT
# ########################

# [Docs root]
#   https://pycqa.github.io/isort/
# [Config option reference]
#   https://pycqa.github.io/isort/docs/configuration/options.html

# NOTE: File inclusion//exclusion/skip options are set at the invocation site
# and shouldn't be set in this config file.

[tool.isort]

# Ensures isort classifies imports from our package as first-party.
known_first_party = ["glaredb_demo"]

# Sets a variety of default options for parentheses etc that are compatible with black.
profile = "black"

# Sorts uppercase imports before lowercase improts.
case_sensitive=true

# ########################
# ##### PYLINT
# ########################

# [Docs root]
#   https://pylint.pycqa.org/en/latest/
# [Rule/options reference]
#   https://pylint.pycqa.org/en/latest/technical_reference/features.html
#   This is a comprehensive reference of all Pylint checkers/rules and seems to be one of the only
#   docs pages that's actually maintained.
# [Changelog]
#   https://pylint.pycqa.org/en/latest/whatsnew/index.html
#   Often contains up-to-date info that corrects incorrect stuff in the older docs.
# [Github issues]
#   https://github.com/PyCQA/pylint/issues
#   Best places to find workarounds or discussion/explanation of weird behavior.

# Pylint has many options that are divvied up by category. Each [SECTION] below corresponds to a
# section in the "Rule/options reference" doc.

[tool.pylint.master]

# the default of 4 is quite aggressive
min-similarity-lines = "20"

# Minimum python version.
py-version = "3.12"

[tool.pylint.messages-control]
disable=[
    # [checker] redundant with mypy
    "typecheck",
    # Sometimes it's useful to leave `TODO` comments in the code.
    "fixme",
]

[tool.pylint.format]

# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#pylint
max-line-length = "88"

[tool.pylint.basic]

# Minimum line length for functions/classes that require docstrings, shorter ones are exempt.
docstring-min-length = "10"

[tool.pylint.design]

# Maximum number of attributes for a class.
max-attributes="8"

# Maximum number of arguments for function / method.
max-args = "8"

# ########################
# ##### MYPY
# ########################

# [Docs root]
#   https://mypy.readthedocs.io/en/stable/index.html
# [Config option reference]
#   https://mypy.readthedocs.io/en/stable/config_file.html#the-mypy-configuration-file

[tool.mypy]

# google.cloud.storage missing library stubs or py.typed marker
ignore_missing_imports = true

# If a type stub package is missing from the environment but available on typeshed, automatically
# install it. Note that without `--non-interactive` this will prompt the user.
install_types = true

# Allow PEP-420-style namespace packages. Without this enabled, different parts of a namespace
# package will trigger "Duplicate module" errors.
namespace_packages = true

# Print codes (e.g. "[arg-type]") for each error in output.
show_error_codes = true

# ########################
# ##### PYTEST
# ########################

# [Docs root]
#   https://docs.pytest.org/en/stable/
# [Config option reference]
#   https://docs.pytest.org/en/stable/reference/customize.html

[tool.pytest.ini_options]

# https://docs.pytest.org/en/stable/how-to/capture-warnings.html#controlling-warnings
filterwarnings = [

]
